@@ -61,6 +61,8 @@ Bugs fixed
 * #7983: autodoc: Generator type annotation is wrongly rendered in py36
 * #8030: autodoc: An uninitialized annotated instance variable is not documented
   when ``:inherited-members:`` option given
+* #8032: autodoc: A type hint for the instance variable defined at parent class
+  is not shown in the document of the derived class
 * #7839: autosummary: cannot handle umlauts in function names
 * #7865: autosummary: Failed to extract summary line when abbreviations found
 * #7866: autosummary: Failed to extract correct summary line when docstring
